# PCB-To-Path-Generator

./: README.md
PCB_TO_PATH_GENERATOR_CONCEPT/: excellon_parser.py  hole1.csv  simple_excellon_reader.py  test-NPTH.drl  test-PTH.drl
scara_test_ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
scara_test_ros2_ws/install/scara_solder_sim/lib/scara_solder_sim/: solder_path_node
scara_test_ros2_ws/install/scara_solder_sim/share/scara_solder_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
scara_test_ros2_ws/src/scara_solder_sim/: setup.cfg  setup.py
scara_test_ros2_ws/src/scara_solder_sim/launch/: solder_sim.launch.py
