<?xml version="1.0"?>
<package format="3">
  <name>scara_solder_sim</name>
  <version>0.0.1</version>
  <description>Reads PCB hole coordinates from CSV and simulates a 3-axis SCARA soldering robot's joint motion (theta = 0, no board rotation calibration applied yet)</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
